--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,11 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 pandas = "^2.2.2"
-polars = "^0.20.22"
+polars = {extras = ["plot"], version = "^0.20.31"}
+pyarrow = "^16.1.0"
+matplotlib = "^3.9.0"
+seaborn = "^0.13.2"
+plotly = "^5.22.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.0"
@@ -28,6 +32,7 @@ openpyxl = "^3.1.2"
 ipykernel = "^6.29.4"
 click = "^8.1.7"
 nbstripout = "^0.7.1"
+marimo = "^0.6.19"
 
 [tool.black]
 target-version = ["py311"]
