--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,44 +1,40 @@
-[tool.poetry]
+[project]
 name = "movie-metadata"
 version = "0.1.0"
-description = ""
-authors = ["Chris Peterson <cdpeters1@gmail.com>"]
+description = "Add your description here"
 readme = "README.md"
+requires-python = ">=3.12"
+dependencies = [
+    "marimo[sql]>=0.10.7",
+    "matplotlib>=3.10.0",
+    "pandas>=2.2.3",
+    "plotly>=5.24.1",
+    "polars[plot]>=1.18.0",
+    "pyarrow>=18.1.0",
+    "seaborn>=0.13.2",
+]
 
-[tool.poetry.dependencies]
-python = "^3.11"
-pandas = "^2.2.2"
-pyarrow = "^16.1.0"
-matplotlib = "^3.9.0"
-seaborn = "^0.13.2"
-plotly = "^5.22.0"
-polars = {extras = ["plot"], version = "^1.0.0"}
+[dependency-groups]
+dev = [
+    "docrepr>=0.2.0",
+    "interrogate>=1.7.0",
+    "ipykernel>=6.29.5",
+    "jupyterlab>=4.3.4",
+    "mypy>=1.14.0",
+    "nbqa>=1.9.1",
+    "nbstripout>=0.8.1",
+    "openpyxl>=3.1.5",
+    "pandas-stubs>=2.2.3.241126",
+    "rich>=13.9.4",
+    "ruff>=0.8.4",
+    "sphinx>=8.1.3",
+]
 
-[tool.poetry.group.dev.dependencies]
-black = "^24.4.0"
-isort = "^5.13.2"
-flake8 = "^7.0.0"
-jupyterlab = "^4.1.6"
-blacken-docs = "^1.16.0"
-flake8-docstrings = "^1.7.0"
-interrogate = "^1.7.0"
-mypy = "^1.10.0"
-nbqa = "^1.8.5"
-sphinx = "^7.3.7"
-docrepr = "^0.2.0"
-rich = "^13.7.1"
-pandas-stubs = "^2.2.1.240316"
-openpyxl = "^3.1.2"
-ipykernel = "^6.29.4"
-click = "^8.1.7"
-nbstripout = "^0.7.1"
-marimo = "^0.6.19"
+[tool.ruff.lint]
+select = ["D"]
 
-[tool.black]
-target-version = ["py311"]
-
-[tool.isort]
-profile = "black"
+[tool.ruff.lint.pydocstyle]
+convention = "numpy"
 
 [tool.interrogate]
 ignore-init-module = true
@@ -47,7 +43,7 @@ verbose = 1
 exclude = ["*.ipynb_checkpoints*"]
 
 [tool.mypy]
-python_version = "3.11"
+python_version = "3.12"
 
 [[tool.mypy.overrides]]
 module = [
@@ -62,10 +58,3 @@ flake8 = [
 interrogate = [
     "--ignore-module"
 ]
-
-[tool.nbqa.md]
-blacken-docs = true
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
