--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ dev = [
     "nbstripout>=0.8.1",
     "openpyxl>=3.1.5",
     "pandas-stubs>=2.2.3.241126",
+    "python-lsp-ruff>=2.2.2",
+    "python-lsp-server>=1.13.1",
     "rich>=13.9.4",
     "ruff>=0.8.4",
     "sphinx>=8.1.3",
